<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:id="@+id/bg_foto2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="323dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-27dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foto" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-26dp"
            android:background="@drawable/custom_bgprofile" />

        <View
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="235dp"
            android:background="@drawable/custom_button2" />

    </RelativeLayout>

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/שםמשפחה"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/שםפרטי"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/cityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/יישובמגורים"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/dateEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/תאריךלידה"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEdit"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/infoEdit"
        android:layout_width="299dp"
        android:layout_height="141dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/קצתעלעצמי"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEdit"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/updateProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/עדכןפרופיל"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>