<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/bg_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/bg_foto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:scaleType="centerCrop"
                android:src="@drawable/foto" />
            <View
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:background="@drawable/custom_bgprofile"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="?attr/colorPrimary" >
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="פרופיל"
                    android:textColor="@android:color/white"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_gravity="center" />
            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="90dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/foto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:id="@+id/nameProfile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="257dp"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="290dp"
                android:text="@string/str_btn_follow"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="300"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:layout_toStartOf="@+id/tv_following"/>
            <TextView
                android:id="@+id/tv_following"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="1999"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:drawableStart="@drawable/ic_cloud_queue_black_24dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:layout_toEndOf="@+id/tv_following"/>



            <TextView
                android:id="@+id/tv_following2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:paddingTop="45dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_toStartOf="@+id/tv_following2"
                android:paddingTop="45dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:layout_toEndOf="@+id/tv_following2"
                android:paddingTop="45dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDDDDD" >

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_information"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="#DDDDDD">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_bggradient">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/birthdateProfile"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_cake_black_24dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="363dp"
                android:layout_height="145dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="85dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_bggradient2">


                <TextView
                    android:id="@+id/infoProfile"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:drawableStart="@drawable/ic_contact_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white" />
            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>